simplified clientService. removed ghostblocks concept.